# stratoclave-distill

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md  GETTING_STARTED.md  PROJECT_RULES.md  PROJECT_STATUS.md  STAGE_B_PLUS_DESIGN.md  STAGE_B_WALKTHROUGH.md  STAGE_D_WALKTHROUGH.md
examples/: quickstart.py
migrations/: README  env.py
migrations/versions/: 0001_initial_schema.py  0002_branching_and_relations.py
scripts/: check-no-hardcoded-secrets.sh
src/stratoclave_distill/: __init__.py  cli.py  config.py
src/stratoclave_distill/core/: __init__.py  errors.py  types.py
src/stratoclave_distill/db/: __init__.py  asyncpg.py  memory.py  stores.py
src/stratoclave_distill/pipeline/: __init__.py  aggregator.py  curator.py  distiller.py  ingest.py  reader.py
src/stratoclave_distill/providers/: __init__.py  embedding.py  llm.py
src/stratoclave_distill/retrieval/: __init__.py  packer.py  retriever.py
tests/: conftest.py
tests/integration/: test_asyncpg_stores.py  test_migrations_against_postgres.py
tests/unit/: test_cli.py  test_config.py  test_migrations.py  test_migrations_0002.py
tests/unit/core/: test_errors.py  test_types.py
tests/unit/db/: test_asyncpg_dsn.py  test_memory_group_learning_store.py  test_memory_stores.py
tests/unit/pipeline/: test_aggregator.py  test_curator.py  test_distiller.py  test_ingest.py  test_reader.py
tests/unit/providers/: test_embedding_stub.py  test_embedding_wire.py  test_llm_stub.py  test_llm_wire.py
tests/unit/retrieval/: test_packer.py  test_retriever.py
