[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "stratoclave-distill"
version = "0.1.0.dev0"
description = "Session distillation, learning aggregation, and hybrid search for stratoclave."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "littlemex" }]
keywords = [
    "stratoclave",
    "agent",
    "rag",
    "embeddings",
    "pgvector",
    "session",
    "distillation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-pyyaml",
]
voyage = ["voyageai>=0.2"]
anthropic = ["anthropic>=0.39"]
openai = ["openai>=1.50"]

[project.urls]
Homepage = "https://github.com/littlemex/stratoclave-distill"
Issues = "https://github.com/littlemex/stratoclave-distill/issues"
Documentation = "https://github.com/littlemex/stratoclave-distill/tree/main/docs"

[project.scripts]
stratoclave-distill = "stratoclave_distill.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stratoclave_distill"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/migrations",
    "/README.md",
    "/LICENSE",
    "/SECURITY.md",
    "/CONTRIBUTING.md",
    "/CODE_OF_CONDUCT.md",
]

# ----------- ruff -----------

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "ASYNC", # async correctness
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length is enforced by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
"migrations/**/*.py" = ["E402", "F401"]

# ----------- mypy -----------

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
files = ["src/stratoclave_distill"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["voyageai.*", "anthropic.*", "openai.*", "pgvector.*"]
ignore_missing_imports = true

# ----------- pytest -----------

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "e2e: end-to-end tests against real LLM/embedding providers (skipped by default)",
    "integration: tests that need a live Postgres + pgvector",
    "slow: tests that take longer than ~1s",
]

[tool.coverage.run]
branch = true
source = ["stratoclave_distill"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
